--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,22 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.5",
+    "@mui/material": "^5.13.6",
+    "@mui/system": "^5.13.6",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "vite": "^4.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -25,7 +32,9 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.3",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "tailwindcss": "^3.3.2"
   }
 }
