--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
+    "papaparse": "^5.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
